--- a/src/pages/chat/index.scss
+++ b/src/pages/chat/index.scss
@@ -139,12 +139,13 @@
   flex: 1;
   width: auto;
   height: 80px;
+  line-height: 80px;
   border-radius: 40px;
   border: 1px solid var(--border-color);
   background: var(--bg-card);
   padding: 0 28px;
   color: var(--text-primary);
-  font-size: 26px;
+  font-size:36px;
 }
 
 .chat-input-placeholder {
