--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -154,6 +154,7 @@
 .home-textarea-shell taro-textarea-core {
   display: block;
   width: 100%;
+  color: #fff;
 }
 
 .home-textarea-shell taro-textarea-core textarea,
